# wgpubench

./: .gitignore  Cargo.toml
assets/: square.wgsl
src/: app.rs  lib.rs  main.rs  square.rs  staged_buffer.rs
src/platform/: mod.rs  native.rs  wasm.rs
src/util/: mod.rs  surface.rs  texture.rs
www/: index.html
